--- a/index.html
+++ b/index.html
@@ -143,24 +143,24 @@
             <div class="container">  
                 <div class="header-items"> 
                    <a class="logo" href="#"><span class="logo-decor-text">Web</span>Studio</a>
-                   <button
-                   class="menu-toggle js-open-menu"
-                   aria-expanded="false"
-                   aria-controls="mobile-menu"
-                 >
-                   <svg
-                     width="24"
-                     height="24"
-                     fill="currentColor"
-                     viewBox="0 0 20 20"
-                     xmlns="http://www.w3.org/2000/svg"
-                   >
-                     <path
-                       fill-rule="evenodd"
-                       d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
-                       clip-rule="evenodd"
-                     ></path>
-                   </svg>
+                   <button 
+                   class="menu-toggle js-open-menu" 
+                   aria-expanded="false" 
+                   aria-controls="mobile-menu" 
+                 > 
+                   <svg 
+                     width="24" 
+                     height="24" 
+                     fill="currentColor" 
+                     viewBox="0 0 20 20" 
+                     xmlns="http://www.w3.org/2000/svg" 
+                   > 
+                     <path 
+                       fill-rule="evenodd" 
+                       d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" 
+                       clip-rule="evenodd" 
+                     ></path> 
+                   </svg> 
                  </button>
                     <div class="navigation">
                        <ul class="nav-ul">        
@@ -283,7 +283,10 @@
                     <h2 class="main-h2">Наша команда</h2>
                     <ul class="team-container">
                             <li class="team-members">
-                                <img src="./img/igor.jpg" alt="Ігор Дем'яненко" height="460" width="450">
+                                <picture>
+                                    <source srcset="./img/igor@2x.png" media="(min-width: 768px)" />
+                                    <img src="./img/igor.jpg" alt="Технокряк" height="460" width="450"/>
+                                </picture>
                                 <div class="team-info">
                                     <h5>Ігор Дем'яненко</h5>
                                     <p>Product Designer</p>
@@ -312,7 +315,10 @@
                                 </div>
                             </li>
                             <li class="team-members">
-                                <img src="./img/olga.jpg" alt="Ольга Рєпіна" height="460" width="450">
+                                <picture>
+                                    <source srcset="./img/olga@2x.png" media="(min-width: 768px)" />
+                                    <img src="./img/olga.jpg" alt="Технокряк" height="460" width="450"/>
+                                </picture>
                                 <div class="team-info">
                                     <h5>Ольга Рєпіна</h5>
                                     <p>Frontend Developer</p>
@@ -338,7 +344,10 @@
                                 </div> 
                             </li>
                             <li class="team-members">
-                                <img src="./img/mykola.jpg" alt="Микола Тарасов" height="460" width="450">
+                                <picture>
+                                    <source srcset="./img/mykola@2x.png" media="(min-width: 768px)" />
+                                    <img src="./img/mykola.jpg" alt="Технокряк" height="460" width="450"/>
+                                </picture>
                                 <div class="team-info">
                                     <h5>Микола Тарасов</h5>
                                     <p>Marketing</p>
@@ -363,7 +372,10 @@
                                 </div>
                             </li>
                             <li  class="team-members">
-                                <img src="./img/michael.jpg" alt="Михайло Єрмаков" height="460" width="450">
+                                <picture>
+                                    <source srcset="./img/michael@2x.png" media="(min-width: 768px)" />
+                                    <img src="./img/michael.jpg" alt="Технокряк" height="460" width="450"/>
+                                </picture>
                                 <div class="team-info">
                                     <h5>Михайло Єрмаков</h5>
                                     <p>UI Designer</p>
@@ -468,6 +480,50 @@
                 </div>
             </div>
         </footer>
+        <div class="menu-container js-menu-container" id="mobile-menu"> 
+            <button class="menu-toggle js-close-menu"> 
+              <svg class="js-close-menu_svg"
+                fill="currentColor" 
+                viewBox="0 0 20 20" 
+                xmlns="http://www.w3.org/2000/svg" 
+                width="24" 
+                height="24" 
+              > 
+                <path 
+                  fill-rule="evenodd" 
+                  d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" 
+                  clip-rule="evenodd" 
+                ></path> 
+              </svg> 
+            </button> 
+       
+            <ul class="mobile-menu"> 
+              <li><a href="#" class="link">Студія</a></li> 
+              <li><a href="#" class="link">Портфоліо</a></li> 
+              <li><a href="#" class="link">Контакти</a></li> 
+            </ul>
+            <ul class="mobile-address">
+                <li>
+                    <a href="tel:+380-096-111-11-11" class="address_el"> +38 096 111 11 11</a>
+                </li>
+                <li>
+                    <a href="email:info@devstudio.com" class="address_el">info@devstudio.com </a>
+                </li>
+            </ul> 
+            <ul class="mobile-networks">
+                <li><a class="mobile-networks_el">Instagram</a></li>
+                <li><a class="mobile-networks_el">Twitter</a></li>
+                <li><a class="mobile-networks_el">Facebook</a></li>
+                <li><a class="mobile-networks_el">LinkedIn</a></li>
+            </ul>
+          </div>
+        <script 
+      defer 
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" 
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" 
+      crossorigin="anonymous" 
+    ></script> 
+    <script defer src="./js/mobile-menu.js"></script>
         <script src="./js/modal.js"></script>
     </body>
 </html>
